# ComPlexionist

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  agents.md  complexionist.ini.example  complexionist.spec  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
Docs/: Completed.md  Implementation-Plan.md  Specification.md  TODO.md
docs/: Code-Review-2026-03.md  Code-Review-2026-07.md  Completed.md  Plex-Background.md  Reference-Analysis.md  Spec-CodeReview.md  Specification.md  TODO.md  Tauri-Migration-Feasibility.md  code review v1.md  trakt-sync-spec.md
src/complexionist/: __main__.py  _version.py  cache.py  cli.py  config.py  errors.py  setup.py  statistics.py  utils.py  validation.py
src/complexionist/api/: __init__.py  base.py  helpers.py
src/complexionist/gaps/: __init__.py  episodes.py  models.py  movies.py
src/complexionist/gui/: __init__.py  app.py  errors.py  library_state.py  state.py  strings.py  theme.py  window_state.py
src/complexionist/gui/screens/: __init__.py  base.py  dashboard.py  help.py  onboarding.py  results.py  scanning.py  settings.py
src/complexionist/models/: __init__.py  mixins.py
src/complexionist/output/: __init__.py
src/complexionist/plex/: __init__.py  client.py  models.py
src/complexionist/tmdb/: client.py  models.py
src/complexionist/tvdb/: __init__.py  client.py  models.py
tests/: test_cache.py  test_cli.py  test_config.py  test_errors.py  test_gaps.py  test_gui_state.py  test_onboarding.py  test_output.py  test_plex.py  test_statistics.py  test_tmdb.py  test_tvdb.py  test_utils.py  test_validation.py  test_version.py
