[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "complexionist"
version = "1.2"
description = "Find missing movies and TV episodes in your Plex library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Steph Koenig" }
]
keywords = ["plex", "media", "movies", "tv", "collections"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "plexapi>=4.17.0",
    "httpx>=0.28.0",
    "click>=8.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.0",
    "rich>=14.0.0",
    "pyyaml>=6.0.0",
    "flet>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "pyinstaller>=6.18.0",
]

[project.scripts]
complexionist = "complexionist.cli:main"

[project.urls]
Homepage = "https://github.com/StephKoenig/ComPlexionist"
Repository = "https://github.com/StephKoenig/ComPlexionist"
Issues = "https://github.com/StephKoenig/ComPlexionist/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/complexionist"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["complexionist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
